<resources>
    <string name="app_name">Справочник</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник монтажника</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="action_search">Поиск</string>
    <string name="menu_dut">Датчики</string>
    <string name="menu_material">Материалы</string>
    <string name="menu_video">Видеоинструкции</string>
    <string name="menu_faq">F.A.Q.</string>
    <string name="menu_map_scheme">Схема проезда</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_about">О нас</string>
    <string name="td_100">\t<b>ДАТЧИК УРОВНЯ ТОПЛИВА</b>\n
        \t<font color="red">ЭСКОРТ ТД-100</font>\n\n
\tНадежная работа в любых условиях\n\n
«Эскорт ТД-100» - простой и удобный в эксплуатации емкостной датчик уровня топлива. Устройство работает в 2-х наиболее распространенных режимах:
        RS-485 (включая возможность автоматической выдачи данных) и частотный, а также обеспечивает гальваническую развязку (1500 В) по всему корпусу датчика.\n\n
\tБлагодаря усовершенствованному алгоритму термокомпенсации, «Эскорт ТД-100» позволяет с максимальной точностью корректировать уровень топлива в зависимости от изменения температуры.
    «ТД-100» прост в настройке и легко интегрируется с любой существующей системой мониторинга.
Поддерживает диапазон температур -60/+80 °С и предназначен для эксплуатации даже в самых тяжелых условиях, не теряя при этом своих свойств и возможностей.\n\n
\tКачество и стабильность работы «ТД-100» обеспечивается высокой степенью защиты от попадания пыли и влаги IP67.\n\n
\tКорпус датчика изготовлен из высококачественного полиамида, обладающего высокой степенью сопротивления к различным внешним механическим воздействиям.
        Провода для подключения надежно изолированы от внешних воздействий пластиковой гофрой повышенной прочности и пластичности.\n\n
\tКроме того, в данной модели есть возможность контролировать целостность соединения датчика с внешним устройством (навигационный терминал и др.).\n\n
        \tПроще говоря, контролировать размыкание разъема и/или обрыв кабеля.\n
        \tС 2014 года нашими клиентами, партнёрами и интеграторами, <b>установлено более 35 тысяч датчиков «Эскорт ТД-100»</b>.\n\n
    <a href="https://www.fmeter.ru/produktsiya/datchik-urovnja-topliva/Jeskort-td-100/">Подробнее о датчике</a></string>
    <string name="td_150">\t<b>ДАТЧИК УРОВНЯ ТОПЛИВА</b>\n
\t<font color="red">ЭСКОРТ ТД-150</font>\n\n
\tНадежная работа в любых условиях\n\n
«Эскорт ТД-150» – высокоточный емкостной датчик уровня топлива (ДУТ), который используется для контроля за расходом,
        заправками, сливами и хищениями топлива на всех видах транспортных средств, в том числе на сельскохозяйственной, строительной,
        коммунальной, другой специальной технике и стационарных емкостях, например, на дизельных генераторах.
ДУТ «Эскорт ТД-150» сочетает в себе наиболее распространенные виды выходных сигналов:\n\n
    Цифровой RS-485, частотный и аналоговый.\n\n
Подходит для применения во взрывоопасной среде, на датчик получен сертификат взрывозащиты OExiallBT6 X.\n\n
Качество подтверждено Сертификатами стран Евросоюза СЕ и E-Mark, Сертификатом Таможенного Союза, Сертификатом соответствия ГОСТ-Р.\n\n
Измерительная часть датчика может быть легко адаптирована под любую глубину бака от 15 см до 6 м.\n\n
Датчик контроля топлива просто настраивается и отлично взаимодействует с системами мониторинга любых производителей.\n\n
        <i>Дополнительные преимущества:</i>\n\n
Гальваническая развязка по всему корпусу датчика;\n\n
Контроль размыкания разъема и/или обрыва кабеля;\n\n
Расширенный диапазон аналогового сигнала от 0,2 до 9 В;\n\n
Рабочий диапазон температуры от -60/+85 °С;\n\n
Усовершенствованный алгоритм термокомпенсации;\n\n
Высокая степень защиты от попадания влаги и пыли IP67;\n\n
Корпус датчика изготовлен из полиамида, обладающего высокой степенью сопротивления к внешним механическим воздействиям.\n
Провода для подключения надежно изолированы от внешних воздействий посредством пластиковой гофры с повышенной прочностью и пластичностью.\n
Датчик «Эскорт ТД-150» был выпущен в 2017 году в ответ на запросы потребителей и является продолжением топливного датчика
        «Эскорт ТД-100» с добавлением к нему аналогового режима работы с расширенным диапазоном сигнала.\n
За короткое время ДУТ «Эскорт ТД-150» завоевал признание у потребителей и сейчас является одной из самых популярных моделей датчиков Эскорт.\n
Датчики уровня топлива «Эскорт-ТД» - это тысячи установок и тонны сэкономленного топлива!\n\n
    <a href="https://www.fmeter.ru/produktsiya/datchik-urovnja-topliva/eskort-td-150/">Подробнее о датчике</a></string>
    <string name="td_500">\t<b>ДАТЧИК УРОВНЯ ТОПЛИВА</b>\n
\t<font color="red">ЭСКОРТ ТД-500</font>\n\n
\tНадежная работа в любых условиях\n\n
Главная отличительная особенность «Эскорт ТД-500» - его универсальность. Датчик поддерживает 4 режима работы: RS-485
        (включая возможность автоматической выдачи данных), аналоговый, частотный и импульсный сигналы.\n\n
Так же существует отдельная модификация – исполнение CAN (J1939).\n\n
Имеет сертификат взрывобезопасности OExiaIIBT6 X, гальваническую развязку по всему корпусу датчика, а также включен в реестр средств измерения.\n\n
«ТД-500» протестирован в реальных условиях при температурных режимах -60/+80 С и устойчив к любым внешним воздействиям: не боится переполюсовки, скачков напряжения, помех, больших перепадов температур.\n\n
В датчике заложен усовершенствованный алгоритм термокомпенсации, который позволяет с максимальной точностью корректировать уровень топлива в зависимости от изменения температуры.\n\n
Повышенная степень защиты от пыли и влаги IP67 обеспечивает высокое качество и стабильную работу на протяжении всего срока эксплуатации.\n\n
Основные детали датчика защищены ударопрочным корпусом из высококачественного полиамида, обладающего высокой
        степенью сопротивления к различным внешним механическим воздействиям. Провода для подключения надежно изолированы от внешних воздействий пластиковой гофрой повышенной прочности и пластичности.\n\n
<b>С 2009 года, нашими партнёрами и интеграторами, установлено более 150 тысяч датчиков уровня топлива Эскорт.</b>\n\n
    <a href="https://www.fmeter.ru/produktsiya/datchik-urovnja-topliva/Jeskort-td-500/">Подробнее о датчике</a></string>
    <string name="td_600">\t<b>ДАТЧИК УРОВНЯ ТОПЛИВА</b>\n
\t<font color="red">ЭСКОРТ ТД-600</font>\n\n
\tНадежная работа в любых условиях\n\n
«Эскорт ТД-600» - универсальный емкостной измеритель уровня топлива, поддерживающий <b>5 режимов работы</b>, что позволяет ему взаимодействовать практически с любым навигационным модулем и не только.\n\n
Все материалы и компоненты защищены ударопрочным корпусом, проверены на устойчивость к экстремальным перепадам
        температуры от -60 до +85 °С и соответствуют высоким стандартам качества и безопасности, установленными системой сертификации ГОСТ-Р.\n\n
        <b>ТД-600</b> имеет гальваническую развязку по всему корпусу датчика, а также обладает повышенной защитой от пыли и влаги IP67.\n\n
    <a href="https://www.fmeter.ru/produktsiya/datchik-urovnja-topliva/eskort-td-600/">Подробнее о датчике</a></string>
    <string name="about_us_anton_txt">\t\t<i>«Работая много лет в ГК «Эскорт» я понял несколько истин:  чтобы добиться успешных результатов - нужно время и упорство; чтобы стать профессионалом -
        нужно смотреть в корень вещей; чтобы стать хорошим руководителем - нужно принимать и уважать людей с их достоинствами и недостатками, но главное для меня – это когда люди вокруг тебя смотрят
        с тобой в одном направлении и развиваются вместе с тобой. Это воодушевляет и не может не радовать.»\n\n
    Антон Туркин, генеральный директор</i></string>
    <string name="about_us_sanych_txt">\t\t<i>«Более 30 лет я занимаюсь разработками, и до сих пор каждое новое устройство приносит мне радость и волнение. Любить то, чем ты занимаешься -
        это та самая энергия, которая помогает двигаться вперед и дает силы на новые свершения».\n\n
    Владимир Александрович Дмитриев, главный разработчик продуктов «Эскорт»</i></string>
    <string name="about_us_rinat_txt">\t\t<i>«У нас молодой и дружный коллектив. Я ценю в людях целеустремленность, коммуникативные навыки и честность.
        Рад, что наша команда состоит именно из таких людей.».\n\n
    Ринат Гафуров, руководитель технического отдела</i></string>
    <string name="about_us_timur_txt">\t\t<i>«Ямайка.Ямайка.Ямайка.Ямайка.Ямайка.Ямайка. Ямайка.Ямайка.Ямайка.Ямайка.Ямайка. Ямайка.Ямайка.
        Ямайка.Ямайка.Ямайка. Ямайка.Ямайка.Ямайка.Ямайка.Ямайка.Ямайка. Ямайка.Ямайка.Ямайка. Ямайка.».\n\n
    Тимур Алмаев, отдел экспорта</i></string>
    <string name="about_us_growth">\t\t<font color="red"><b>16 ЛЕТ УСТОЙЧИВОГО РАЗВИТИЯ</b></font>\n\n
\t\tОт небольшого интегратора до крупного производителя\n\n
\tНачиная в 2004 году свою деятельность в качестве интеграторов, мы как никто другие знаем все специфические особенности работы в отрасли
        транспортной телематики. Поэтому сегодня, являясь производителями собственной продукции, свою важнейшую задачу мы видим в том, чтобы обеспечить рынок лучшими
        по функциональности и стоимости продуктами и предоставить нашим клиентам надежное, качественное оборудование.\n
\tЗа период работы мы успешно реализовали более 190 тысяч различных датчиков, и их производство продолжает расти.\n
\tПартнерскую сеть нашей компании сегодня составляют более 450 интеграторов, дистрибьюторов и дилеров по всему миру, в различных регионах и отраслях.
        Также мы осуществляем прямые поставки на конвейерные линии крупнейших российских предприятий: \n <b>«Ростсельмаш», «Лиаз», «ГАЗ», «ПАЗ»</b>.</string>
    <string name="contacts_rus_calls">Россия</string>
    <string name="contacts_sng_calls">СНГ</string>
    <string name="contacts_address">Наш адрес:\nРеспублика Татарстан, г. Казань,\n ул. Дементьева, 2Б корпус 4</string>
    <string name="contacts_tech_support">Техподдержка</string>
    <string name="menu_different">Разное</string>
</resources>